--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;400&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/5ac3be84e8.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery/1.8.10/jquery.min.js"></script>
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    
 </head>
 <body>
 
