--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;400&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/5ac3be84e8.js" crossorigin="anonymous"></script>
-    <script
-  src="https://code.jquery.com/jquery-3.6.1.min.js"
-  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-  crossorigin="anonymous"></script>
-    
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
+
 </head>
 <body>
 
