--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     <script src="https://kit.fontawesome.com/5ac3be84e8.js" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
+    <script
+        src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+        crossorigin="anonymous"></script>
 
 </head>
 <body>
